--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.13.0",
     "nodemon": "^1.9.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^4.5.3"
   },
   "devDependencies": {
