--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bcrypt": "^0.8.6",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
+    "connect": "^3.4.1",
+    "connect-pg-simple": "^3.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "moment": "^2.13.0",
